[package]
name = "topal"
version = "0.1.0"
edition = "2024"

[dependencies]
reedline = "0.47.0"

# [lints.rust]
# TODO

[lints.clippy]
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# cargo
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# nursery
option_if_let_else = "allow"

# pedantic
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

# restriction
alloc_instead_of_core = "allow"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
expect_used = "allow"
implicit_return = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
non_ascii_literal = "allow"
question_mark_used = "allow"
panic = "allow"
print_stderr = "allow"
print_stdout = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_core = "allow"
unreachable = "allow"
unseparated_literal_suffix = "allow"
unwrap_used = "allow"
use_debug = "allow"

# suspicious
blanket_clippy_restriction_lints = "allow"
